--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 Changelog of WinPrint
 =====================
 
+WinPrint 1.5.0.58
+-----------------
+ - [ADD] Added code pages CP-859 to supported ones
+
 WinPrint 1.5.0.57
 -----------------
  - [ADD] Added code pages CP-853, CP-856 and Win-951 to supported ones
