--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,7 @@ Changelog of WinPrint
 
 WinPrint 1.5.0.59
 -----------------
- - [ADD] Added code page CP-774 to supported ones
+ - [ADD] Added code pages CP-774 and CP-851 to supported ones
  - [ADD] Added code pages Kamenicky and CWI-2 to supported ones
 
 WinPrint 1.5.0.58
